--- a/netflix/netflixProject.ipynb
+++ b/netflix/netflixProject.ipynb
@@ -745,7 +745,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# PLACEHOLDER TEXT"
+   ]
   }
  ],
  "metadata": {
