--- a/python_SMU/CALI FILES/QtW/Clustering.ipynb
+++ b/python_SMU/CALI FILES/QtW/Clustering.ipynb
@@ -1359,7 +1359,7 @@
    "id": "175f906a",
    "metadata": {},
    "source": [
-    "So, let's make sure, probably spelled this wrong, there we are. All right, so let's go ahead and take a look, as we fit this. Now, we're going to use our new vectors that we did with our TF-IDF, and, of course, we'll need the targets, so we'll need the target. So let's see what happens."
+    "All right, so let's go ahead and take a look, as we fit this. Now, we're going to use our new vectors that we did with our TF-IDF, and, of course, we'll need the targets, so we'll need the target. So let's see what happens."
    ]
   },
   {
@@ -1846,7 +1846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1860,7 +1860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
