--- a/python_SMU/CALI FILES/QtW/Case Study 3/Scott_Frazier_CaseStudy3.ipynb
+++ b/python_SMU/CALI FILES/QtW/Case Study 3/Scott_Frazier_CaseStudy3.ipynb
@@ -1859,7 +1859,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1873,7 +1873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
